/**
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.bookkeeper.proto";
option optimize_for = SPEED;

import "src/main/proto/BookkeeperProtocol.proto";

enum AuthMessageType {
    SUCCESS_RESPONSE = 1;
    FAILURE_RESPONSE = 2;
    PAYLOAD_MESSAGE = 3;
}

/**
 *
 */
extend AuthMessage {
    required AuthMessageType messageType = 1000;
}
